navbar as partial view

--- a/SchoolManagement/SchoolManagement.Presentation/Views/Shared/_Layout.cshtml
+++ b/SchoolManagement/SchoolManagement.Presentation/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse bg-dark navbar-fixed-top">
+    @*<div class="navbar navbar-inverse bg-dark navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -30,7 +30,9 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div>*@
+
+    @Html.Partial("_HomeNavbar")
     <div class="container body-content">
         @RenderBody()
         <hr />
